Autokey doesn't work for local Z-Axis in Camera view with MotionPaths enabled #37755

Closed
opened 2013-12-09 15:55:49 +01:00 by Sebastian Koenig · 7 comments

System Information
Operating system and graphics card
OSX 10.9 GTX 660ti

Blender Version
Broken: Blender 2.69 964252c
Worked: don't know. was broken in 2.68 already

Short description of error
If you are in camera view and want to animate the camera moving forward / backward with autokey by doing g+zz, it doesn't fill in a keyframe as long as you have motionpaths enabled.
It does work fine if you move the camera along local z-axis in any other view.

Exact steps for others to reproduce the error
Open the attached file, press g+zz in lower 3D-Viewport and hit enter. You'll notice the camera jumps back to original position.
If you move the cam along local z in upper viewport, it fills in the keyframe just fine.
Seems to be caused by having motionpath display enabled
motionpaths_autokey_camera.blend

**System Information** Operating system and graphics card OSX 10.9 GTX 660ti **Blender Version** Broken: Blender 2.69 964252c Worked: don't know. was broken in 2.68 already **Short description of error** If you are in camera view and want to animate the camera moving forward / backward with autokey by doing g+zz, it doesn't fill in a keyframe as long as you have motionpaths enabled. It does work fine if you move the camera along local z-axis in any other view. **Exact steps for others to reproduce the error** Open the attached file, press g+zz in lower 3D-Viewport and hit enter. You'll notice the camera jumps back to original position. If you move the cam along local z in upper viewport, it fills in the keyframe just fine. Seems to be caused by having motionpath display enabled [motionpaths_autokey_camera.blend](https://archive.blender.org/developer/F37879/motionpaths_autokey_camera.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Joshua Leung was assigned by Sebastian Koenig 2013-12-09 15:55:49 +01:00
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Member

Looking into this, the keyframes do seem to be getting set correctly as expected. This can be checked by stepping forward and back, or checking the motion paths.

Instead, what is happening is that after the paths get recalculated, a hack is applied to restore the pre motionpath bake transform values (5847 in transform_conversions.c). This is needed because the motionpath baking process will overwrite anything that hasn't been keyframed already (which may still happen, even after enabling autokeying).

Looking into this, the keyframes do seem to be getting set correctly as expected. This can be checked by stepping forward and back, or checking the motion paths. Instead, what is happening is that after the paths get recalculated, a hack is applied to restore the pre motionpath bake transform values (5847 in transform_conversions.c). This is needed because the motionpath baking process will overwrite anything that hasn't been keyframed already (which may still happen, even after enabling autokeying).

This issue was referenced by blender/blender-addons-contrib@fcdc04af4f

This issue was referenced by blender/blender-addons-contrib@fcdc04af4f7c7c799dab5e5a38942ad6cc55b3d5

This issue was referenced by fcdc04af4f

This issue was referenced by fcdc04af4f7c7c799dab5e5a38942ad6cc55b3d5
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit fcdc04af4f.

Closed by commit fcdc04af4f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37755
No description provided.