Fix T37755: Autokey doesn't work for local Z-Axis in Camera view with MotionPaths enabled

The problem here was that the hack used to fix T24551 in r32863
would cause the camera to jump back to its pre-transform position
after motionpaths were recalculated. This made it seem like a keyframe
wasn't inserted by AutoKeying (even though it was).